# cmake-project

./: CMakeLists.txt  README.md
include/: common.h  hello.h
src/: CMakeLists.txt  hello.cpp
